syntax = "proto3";
package base_proto_type;

option go_package = "./;base_proto_type";

// protoc -I=. --go_out=./ *.proto

// protoc -I=. --dart_out=./dart *.proto
message PBString {
  string Value = 1;
}

message PBBool {
  bool Value = 1;
}

message PBListString {
  repeated string ListString = 1;
}

message PBUint64 {
  uint64 Value = 1;
}